:art: Prevent poster blur from overflowing

--- a/src/components/poster.module.css
+++ b/src/components/poster.module.css
@@ -10,3 +10,8 @@
   border-radius: 10px 10px 0 0 !important;
   width: 100%;
 }
+
+.cardCover {
+  border-radius: 10px 10px 0 0 !important;
+  overflow: hidden;
+}
